WIP #101 fixing some dark mode styling in profile-settings page. WIP #96 moving to use actual device settings object in profile settings screen.

--- a/apps/mobile/pushtracker/src/app/scss/profile-settings/_profile-settings-base.scss
+++ b/apps/mobile/pushtracker/src/app/scss/profile-settings/_profile-settings-base.scss
@@ -55,4 +55,48 @@
     font-family: $material-icon;
     horizontal-align: left;
   }
+
+  .SLIDER_DIALOG_BASE {
+    height: 100%;
+
+    > StackLayout {
+      margin: 24;
+      border-radius: 2;
+
+      .setting-title {
+        font-family: $os;
+        font-size: 18;
+        font-weight: bold;
+        horizontal-align: left;
+        vertical-align: center;
+        margin: 12;
+      }
+
+      .setting-description {
+        font-family: $os;
+        font-size: 10;
+        margin-left: 12;
+      }
+
+      .slider-value {
+        font-family: $os;
+        font-size: 18;
+        font-weight: bold;
+        horizontal-align: center;
+        vertical-align: center;
+        margin: 12;
+      }
+
+      .cancel-btn {
+        @extend .btn-transparent;
+        horizontal-align: right;
+        text-align: right;
+      }
+
+      .ok-btn {
+        @extend .btn-transparent;
+        horizontal-align: right;
+      }
+    }
+  }
 }
